--- a/app/src/main/res/layout/activity_data_diri.xml
+++ b/app/src/main/res/layout/activity_data_diri.xml
@@ -67,19 +67,17 @@
                     android:layout_height="match_parent"
                     android:background="@color/background_field">
 
-                    <de.hdodenhof.circleimageview.CircleImageView
+                    <ImageView
                         android:id="@+id/ivImageUser"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:gravity="center"
                         android:elevation="100dp"
-                        android:layout_marginStart="5dp"
+                        android:src="@drawable/ic_register_icon"
                         app:layout_constraintTop_toTopOf="@+id/contrainCircleImage"
                         app:layout_constraintBottom_toBottomOf="@+id/contrainCircleImage"
                         app:layout_constraintEnd_toEndOf="@+id/contrainCircleImage"
                         app:layout_constraintStart_toStartOf="@+id/contrainCircleImage"
-                        android:textColor="@color/warna_primary_font"
-                        android:textSize="16sp"
                         tools:ignore="RtlSymmetry" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -91,6 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tambah gambar "
+                android:textColor="@color/warna_secondary_font"
                 android:fontFamily="@font/dm_sans"
                 app:layout_constraintTop_toBottomOf="@+id/cardFotoUser"
                 app:layout_constraintStart_toStartOf="@+id/constrainDataDiri"
@@ -101,6 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email"
+                android:textColor="@color/warna_auth_font"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textSize="16sp"
                 android:layout_marginVertical="20dp"
@@ -126,6 +126,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="Email"
+                android:textColorHint="@color/warna_auth_font"
+                android:textColor="@color/warna_auth_font"
                 android:paddingStart="10dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginVertical="5dp"
@@ -141,6 +143,7 @@
                 android:text="Kewarganegaraan"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textSize="16sp"
+                android:textColor="@color/warna_auth_font"
                 android:layout_marginVertical="20dp"
                 android:layout_marginStart="24dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -188,6 +191,7 @@
                 android:text="Negara"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textSize="16sp"
+                android:textColor="@color/warna_auth_font"
                 android:layout_marginVertical="5dp"
                 android:layout_marginStart="24dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -225,6 +229,7 @@
                     android:text="Pilih Negara"
                     android:fontFamily="@font/dm_sans_medium"
                     android:textSize="12sp"
+                    android:textColor="@color/warna_auth_font"
                     android:layout_marginVertical="5dp"
                     app:layout_constraintTop_toTopOf="@id/constrainPilihDokumen"
                     app:layout_constraintStart_toStartOf="@id/constrainPilihDokumen"
@@ -252,6 +257,8 @@
                 android:paddingStart="10dp"
                 android:hint="Masukkan No Dokumen"
                 android:fontFamily="@font/dm_sans"
+                android:textColorHint="@color/warna_auth_font"
+                android:textColor="@color/warna_auth_font"
                 android:background="@drawable/rounded_bg"
                 app:layout_constraintStart_toStartOf="@+id/constrainDataDiri"
                 app:layout_constraintEnd_toEndOf="@+id/constrainDataDiri"
@@ -262,6 +269,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nama Depan"
+                android:textColor="@color/warna_auth_font"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textSize="16sp"
                 android:layout_marginVertical="25dp"
@@ -290,6 +298,8 @@
                 android:paddingStart="10dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginVertical="5dp"
+                android:textColorHint="@color/warna_auth_font"
+                android:textColor="@color/warna_auth_font"
                 android:background="@drawable/transparent_bg_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvNamaDepan"
@@ -302,6 +312,7 @@
                 android:text="Nama Belakang"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textSize="16sp"
+                android:textColor="@color/warna_auth_font"
                 android:layout_marginVertical="25dp"
                 android:layout_marginStart="24dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -328,6 +339,8 @@
                 android:paddingStart="10dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginVertical="5dp"
+                android:textColorHint="@color/warna_auth_font"
+                android:textColor="@color/warna_auth_font"
                 android:background="@drawable/transparent_bg_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvNamaBelakang"
@@ -340,6 +353,7 @@
                 android:text="Tanggal Lahir"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textSize="16sp"
+                android:textColor="@color/warna_auth_font"
                 android:layout_marginVertical="25dp"
                 android:layout_marginStart="24dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -378,8 +392,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="mm/dd/yyyy"
-                    android:textColor="@color/warna_secondary_font"
-                    android:textColorHint="@color/warna_primary_font"
+                    android:textColorHint="@color/warna_auth_font"
+                    android:textColor="@color/warna_auth_font"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -403,6 +417,7 @@
                 android:text="Alamat"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textSize="16sp"
+                android:textColor="@color/warna_auth_font"
                 android:layout_marginVertical="25dp"
                 android:layout_marginStart="24dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -439,6 +454,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="5dp"
                     android:hint="Alamat"
+                    android:textColorHint="@color/warna_auth_font"
+                    android:textColor="@color/warna_auth_font"
                     android:background="@drawable/transparent_bg_button"
                     app:layout_constraintTop_toTopOf="@+id/constAlamat"
                     app:layout_constraintEnd_toEndOf="@+id/constAlamat"
@@ -453,6 +470,7 @@
                 android:text="Jenis Kelamin"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textSize="16sp"
+                android:textColor="@color/warna_auth_font"
                 android:layout_marginVertical="20dp"
                 android:layout_marginStart="24dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -500,6 +518,7 @@
                 android:text="Kata Sandi"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textSize="16sp"
+                android:textColor="@color/warna_auth_font"
                 android:layout_marginVertical="20dp"
                 android:layout_marginStart="24dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -526,6 +545,8 @@
                 android:paddingStart="10dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginVertical="5dp"
+                android:textColorHint="@color/warna_auth_font"
+                android:textColor="@color/warna_auth_font"
                 android:background="@drawable/transparent_bg_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvPassword"
@@ -538,6 +559,7 @@
                 android:text="Konfirmasi Kata Sandi"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textSize="16sp"
+                android:textColor="@color/warna_auth_font"
                 android:layout_marginVertical="20dp"
                 android:layout_marginStart="24dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -564,6 +586,8 @@
                 android:paddingStart="10dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginVertical="5dp"
+                android:textColorHint="@color/warna_auth_font"
+                android:textColor="@color/warna_auth_font"
                 android:background="@drawable/transparent_bg_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvConfPassword"
