--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,6 +71,7 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginVertical="20dp"
+        android:src="@drawable/ic_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lyLogin" />
@@ -81,6 +82,7 @@
         android:layout_height="wrap_content"
         android:text="Email"
         android:fontFamily="@font/dm_sans_medium"
+        android:textColor="@color/warna_auth_font"
         android:textSize="16sp"
         android:layout_marginVertical="33dp"
         android:layout_marginStart="24dp"
@@ -108,6 +110,8 @@
         android:paddingStart="10dp"
         android:layout_marginEnd="24dp"
         android:layout_marginVertical="5dp"
+        android:textColorHint="@color/warna_auth_font"
+        android:textColor="@color/warna_auth_font"
         android:background="@drawable/transparent_bg_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvEmail"
@@ -120,6 +124,7 @@
         android:text="Kata Sandi"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
+        android:textColor="@color/warna_auth_font"
         android:layout_marginStart="24dp"
         android:layout_marginVertical="5dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -146,6 +151,8 @@
         android:inputType="textPassword"
         android:layout_marginEnd="24dp"
         android:layout_marginVertical="5dp"
+        android:textColorHint="@color/warna_auth_font"
+        android:textColor="@color/warna_auth_font"
         android:background="@drawable/transparent_bg_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPassword"
