--- a/app/src/main/res/layout/activity_lupa_password.xml
+++ b/app/src/main/res/layout/activity_lupa_password.xml
@@ -36,6 +36,7 @@
         android:id="@+id/ivLupaPW"
         android:layout_width="300dp"
         android:layout_height="300dp"
+        android:src="@drawable/ic_register"
         android:layout_marginVertical="71dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +50,7 @@
         android:layout_marginVertical="74dp"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
+        android:textColor="@color/warna_auth_font"
         android:layout_marginStart="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivLupaPW"/>
@@ -74,6 +76,8 @@
         android:paddingStart="10dp"
         android:layout_marginEnd="24dp"
         android:layout_marginVertical="5dp"
+        android:textColorHint="@color/warna_auth_font"
+        android:textColor="@color/warna_auth_font"
         android:background="@drawable/transparent_bg_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvEmail"
