--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/warna_background"
     tools:context=".features.auth.register.RegisterActivity">
 
     <TextView
@@ -54,6 +55,7 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginVertical="20dp"
+        android:src="@drawable/ic_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lyLogin" />
@@ -65,6 +67,7 @@
         android:text="Negara"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
+        android:textColor="@color/warna_auth_font"
         android:layout_marginVertical="33dp"
         android:layout_marginStart="24dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,6 +104,7 @@
             android:text="Pilih Negara"
             android:fontFamily="@font/dm_sans_medium"
             android:textSize="12sp"
+            android:textColor="@color/warna_auth_font"
             android:layout_marginVertical="5dp"
             app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
             app:layout_constraintStart_toStartOf="@id/constrainPilihNegara"
@@ -125,6 +129,7 @@
         android:text="No Hp"
         android:fontFamily="@font/dm_sans_medium"
         android:textSize="16sp"
+        android:textColor="@color/warna_auth_font"
         android:layout_marginVertical="5dp"
         android:layout_marginStart="24dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,6 +157,8 @@
         android:inputType="numberPassword"
         android:layout_marginEnd="24dp"
         android:textSize="12sp"
+        android:textColorHint="@color/warna_auth_font"
+        android:textColor="@color/warna_auth_font"
         android:fontFamily="@font/dm_sans_medium"
         android:layout_marginVertical="5dp"
         android:background="@drawable/transparent_bg_button"
