--- a/app/src/main/res/layout/activity_verifikasi.xml
+++ b/app/src/main/res/layout/activity_verifikasi.xml
@@ -65,6 +65,8 @@
         android:layout_width="342dp"
         android:layout_height="48dp"
         android:layout_marginVertical="54dp"
+        android:textColorHint="@color/warna_auth_font"
+        android:textColor="@color/warna_auth_font"
         android:background="@color/background_field"
         android:gravity="center"
         android:hint="Masukkan 6 digit Kode OTP"
@@ -423,6 +425,7 @@
             android:id="@+id/ivDeleteOtp"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:src="@drawable/ic_delete_verif"
             app:layout_constraintTop_toTopOf="@+id/constrainEmpat"
             app:layout_constraintBottom_toBottomOf="@+id/constrainEmpat"
             app:layout_constraintEnd_toEndOf="@+id/constrainEmpat"/>
