--- a/app/src/main/res/layout/fragment_on_boarding_one.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_one.xml
@@ -14,6 +14,7 @@
         android:layout_height="300dp"
         android:layout_marginVertical="100dp"
         android:gravity="center"
+        android:src="@drawable/onboarding_satu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
