--- a/app/src/main/res/layout/fragment_on_boarding_three.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_three.xml
@@ -13,6 +13,7 @@
         android:layout_height="300dp"
         android:layout_marginVertical="100dp"
         android:gravity="center"
+        android:src="@drawable/onboarding_tiga"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
