--- a/app/src/main/res/layout/activity_verifikasi.xml
+++ b/app/src/main/res/layout/activity_verifikasi.xml
@@ -25,6 +25,7 @@
         android:text="Verifikasi Kode OTP"
         android:textSize="22sp"
         android:textAlignment="center"
+        android:textColor="@color/warna_auth_font"
         android:fontFamily="@font/dm_sans_bold"
         app:layout_constraintTop_toBottomOf="@+id/ivBack"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +40,7 @@
         android:textAlignment="center"
         android:layout_marginStart="42dp"
         android:layout_marginEnd="42dp"
+        android:textColor="@color/warna_secondary_font"
         android:fontFamily="@font/dm_sans_bold"
         app:layout_constraintTop_toBottomOf="@+id/tvTittleOtp"
         app:layout_constraintStart_toStartOf="parent"
