validasi+fitur.auth

--- a/app/src/main/res/layout/activity_lupa_password.xml
+++ b/app/src/main/res/layout/activity_lupa_password.xml
@@ -36,11 +36,21 @@
         android:id="@+id/ivLupaPW"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:src="@drawable/ic_register"
+        android:src="@drawable/ic_lupapw"
         android:layout_marginVertical="71dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvLupaPassword" />
+    
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/masukkan_email_anda_untuk"
+        android:textSize="16sp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivLupaPW"/>
 
     <TextView
         android:id="@+id/tvEmail"
@@ -83,19 +93,32 @@
         app:layout_constraintTop_toBottomOf="@+id/tvEmail"
         android:layout_marginStart="24dp"/>
 
+    <TextView
+        android:id="@+id/tvWarningEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email salah"
+        android:paddingStart="10dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="5dp"
+        android:textColorHint="@color/warning_font"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etEmail"/>
+
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/firstbutton"
         android:fontFamily="@font/dm_sans_medium"
         android:layout_marginVertical="55dp"
         android:paddingVertical="10dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:text="Masuk"
+        android:text="Kirim"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:enabled="false"
+        android:backgroundTint="@color/warna_button"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
