--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -118,6 +118,18 @@
         android:layout_marginStart="24dp"/>
 
     <TextView
+        android:id="@+id/tvWarningEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email salah"
+        android:paddingStart="10dp"
+        android:layout_marginStart="24dp"
+        android:textColorHint="@color/warning_font"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>
+
+    <TextView
         android:id="@+id/tvPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -128,7 +140,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginVertical="5dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvWarningEmail"/>
 
     <TextView
         android:id="@+id/tvStarPassword"
@@ -140,7 +152,7 @@
         android:textSize="16sp"
         android:layout_marginStart="5dp"
         app:layout_constraintStart_toEndOf="@+id/tvPassword"
-        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvWarningEmail"/>
 
     <EditText
         android:id="@+id/etPassword"
@@ -149,6 +161,7 @@
         android:hint="Kata Sandi"
         android:paddingStart="10dp"
         android:inputType="textPassword"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@$#"
         android:layout_marginEnd="24dp"
         android:layout_marginVertical="5dp"
         android:textColorHint="@color/warna_auth_font"
@@ -157,6 +170,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPassword"
         android:layout_marginStart="24dp"/>
+
+    <TextView
+        android:id="@+id/tvWarningKataSandi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etPassword"
+        android:paddingStart="10dp"
+        android:layout_marginStart="24dp"
+        android:hint="Kata sandi salah"
+        android:textColorHint="@color/warning_font"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/tvLupaPassword"
@@ -168,7 +193,7 @@
         android:textColor="@color/warna_button"
         android:layout_marginVertical="5dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword"
+        app:layout_constraintTop_toBottomOf="@+id/tvWarningKataSandi"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
