--- a/app/src/main/res/layout/activity_international_transfer.xml
+++ b/app/src/main/res/layout/activity_international_transfer.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/warna_background"
-    tools:context=".features.transfer.TransferActivity">
+    tools:context=".features.metodetransfer.internasional.InternationalTransferActivity">
 
     <ImageView
         android:id="@+id/ivBack"
@@ -66,7 +65,7 @@
             app:layout_constraintTop_toTopOf="@+id/constrainPilihNegara"
             app:layout_constraintBottom_toBottomOf="@+id/constrainPilihNegara">
 
-            <ImageView
+            <ImageSwitcher
                 android:id="@+id/ivAsalTf"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -74,12 +73,13 @@
 
         </FrameLayout>
 
-        <ImageView
-            android:id="@+id/ivDropAsal"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
+
+        <Spinner
+            android:id="@+id/spinner_asal"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:spinnerMode="dialog"
+            android:backgroundTint="#000000"
             app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
             app:layout_constraintStart_toEndOf="@id/frameAsalTf"
             app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
@@ -96,7 +96,7 @@
             android:background="@drawable/rounded_bg_sechond"
             android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
             app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
-            app:layout_constraintStart_toEndOf="@id/ivDropAsal"
+            app:layout_constraintStart_toEndOf="@id/spinner_asal"
             app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -283,4 +283,5 @@
         app:layout_constraintTop_toBottomOf="@+id/tvTotal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
