--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -9,6 +9,7 @@
     tools:context=".features.home.fragment.HistoryFragment">
     
     <TextView
+        android:id="@+id/tvTitleRiwayat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Riwayat Transaksi"
@@ -20,5 +21,101 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/tvDari"
+        android:layout_width="164dp"
+        android:layout_height="wrap_content"
+        android:text="Dari :"
+        android:textSize="18sp"
+        android:layout_marginTop="37dp"
+        android:layout_marginStart="24dp"
+        android:textColor="@color/warna_auth_font"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitleRiwayat"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constDate"
+        android:layout_width="164dp"
+        android:layout_height="50dp"
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/rounded_bg_sechond"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDari">
+
+        <TextView
+            android:id="@+id/tvTgllahir"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="mm/dd/yyyy"
+            android:textColorHint="@color/warna_auth_font"
+            android:textColor="@color/warna_auth_font"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/ivCalenderDari"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_baseline_calendar_month_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tvTujuan"
+        android:layout_width="164dp"
+        android:layout_height="wrap_content"
+        android:text="Sampai :"
+        android:textSize="18sp"
+        android:layout_marginTop="37dp"
+        android:textColor="@color/warna_auth_font"
+        app:layout_constraintStart_toStartOf="@+id/constDateTujuan"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitleRiwayat"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constDateTujuan"
+        android:layout_width="164dp"
+        android:layout_height="50dp"
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/rounded_bg_sechond"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTujuan">
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="mm/dd/yyyy"
+            android:textColorHint="@color/warna_auth_font"
+            android:textColor="@color/warna_auth_font"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/ivCalender"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_baseline_calendar_month_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
