--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,42 +38,57 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constrainProfile"
             android:layout_width="342dp"
-            android:layout_height="94dp"
-            android:background="@color/warna_background">
+            android:layout_height="139dp"
+            android:background="@color/warna_background_button">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/ivSetImage"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:layout_marginVertical="33dp"
-                android:layout_marginStart="13dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginVertical="20dp"
                 android:src="@drawable/ic_launcher_background"
-                app:layout_constraintBottom_toBottomOf="@+id/constrainProfile"
+                app:layout_constraintTop_toTopOf="@+id/constrainProfile"
                 app:layout_constraintStart_toStartOf="@+id/constrainProfile"
-                app:layout_constraintTop_toTopOf="@+id/constrainProfile" />
+                app:layout_constraintEnd_toEndOf="@+id/constrainProfile"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginBottom="18dp"
+                app:cardCornerRadius="30dp"
+                android:backgroundTint="@color/warna_background_rounded_dokumen"
+                app:layout_constraintBottom_toTopOf="@+id/tvNamaUser"
+                app:layout_constraintStart_toEndOf="@+id/ivSetImage">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_baseline_camera_alt_24"/>
+
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/tvNamaUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Dinda Salsabila"
-                android:layout_marginStart="15dp"
                 android:textSize="18sp"
+                android:layout_marginTop="18dp"
                 android:fontFamily="@font/dm_sans_medium"
                 android:textColor="@color/warna_auth_font"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/ivSetImage"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="@+id/constrainProfile"
+                app:layout_constraintStart_toStartOf="@+id/constrainProfile"
+                app:layout_constraintTop_toBottomOf="@+id/ivSetImage"/>
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginEnd="17dp"
-                android:layout_marginVertical="10dp"
-                android:src="@drawable/ic_launcher_background"
-                app:layout_constraintEnd_toEndOf="@+id/constrainProfile"
-                app:layout_constraintTop_toTopOf="@+id/constrainProfile"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_edit"
+                android:layout_marginTop="23dp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/ivSetImage"
+                app:layout_constraintStart_toEndOf="@+id/tvNamaUser"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
