--- a/app/src/main/res/layout/activity_lupa_password_pw.xml
+++ b/app/src/main/res/layout/activity_lupa_password_pw.xml
@@ -124,6 +124,18 @@
         android:layout_marginTop="5dp"
         android:layout_marginStart="24dp"/>
 
+    <TextView
+        android:id="@+id/tvWarningKataSandiBaru"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kata sandi terdiri dari 8 - 16"
+        android:textColor="@color/warning_font"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="5dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etKonfirmasiKatasandi"/>
+
     <Button
         android:id="@+id/btnKirim"
         android:layout_width="match_parent"
