--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -161,7 +161,7 @@
         android:hint="Kata Sandi"
         android:paddingStart="10dp"
         android:inputType="textPassword"
-        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@$#"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#*"
         android:layout_marginEnd="24dp"
         android:layout_marginVertical="5dp"
         android:textColorHint="@color/warna_auth_font"
