--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -86,41 +86,68 @@
         app:layout_constraintStart_toEndOf="@+id/tvNegara"
         app:layout_constraintTop_toBottomOf="@+id/ivRegist"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constrainPilihNegara"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:src=""
+        app:layout_constraintEnd_toStartOf="@+id/frameNegara"
+        app:layout_constraintTop_toBottomOf="@+id/tvNegara"/>
+
+    <FrameLayout
+        android:id="@+id/frameNegara"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:layout_marginStart="80dp"
         android:layout_marginEnd="24dp"
-        android:background="@drawable/transparent_bg_button"
-        app:layout_constraintTop_toBottomOf="@+id/tvNegara"
+        android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/tvNegara"
+        android:background="@color/background_field">
 
-        <TextView
-            android:id="@+id/etNegara"
-            android:layout_width="wrap_content"
+        <Spinner
+            android:id="@+id/spinnerNegara"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Pilih Negara"
-            android:fontFamily="@font/dm_sans_medium"
-            android:textSize="12sp"
-            android:textColor="@color/warna_auth_font"
-            android:layout_marginVertical="5dp"
-            app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
-            app:layout_constraintStart_toStartOf="@id/constrainPilihNegara"
-            app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"
-            android:layout_marginStart="10dp"/>
+            android:minHeight="48dp"/>
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-            app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
-            app:layout_constraintEnd_toEndOf="@id/constrainPilihNegara"
-            app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
+    </FrameLayout>
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/constrainPilihNegara"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginStart="24dp"-->
+<!--        android:layout_marginEnd="24dp"-->
+<!--        android:background="@drawable/transparent_bg_button"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/tvNegara"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent">-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        <TextView-->
+<!--            android:id="@+id/etNegara"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Pilih Negara"-->
+<!--            android:fontFamily="@font/dm_sans_medium"-->
+<!--            android:textSize="12sp"-->
+<!--            android:textColor="@color/warna_auth_font"-->
+<!--            android:layout_marginVertical="5dp"-->
+<!--            app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"-->
+<!--            app:layout_constraintStart_toStartOf="@id/constrainPilihNegara"-->
+<!--            app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"-->
+<!--            android:layout_marginStart="10dp"/>-->
+
+<!--        <ImageView-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:layout_marginEnd="10dp"-->
+<!--            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"-->
+<!--            app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/constrainPilihNegara"-->
+<!--            app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
     <TextView
         android:id="@+id/tvNoHp"
@@ -133,7 +160,7 @@
         android:layout_marginVertical="5dp"
         android:layout_marginStart="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constrainPilihNegara"/>
+        app:layout_constraintTop_toBottomOf="@+id/frameNegara"/>
 
     <TextView
         android:id="@+id/tvStarNoHp"
@@ -146,7 +173,7 @@
         android:layout_marginVertical="5dp"
         android:layout_marginStart="5dp"
         app:layout_constraintStart_toEndOf="@+id/tvNoHp"
-        app:layout_constraintTop_toBottomOf="@+id/constrainPilihNegara"/>
+        app:layout_constraintTop_toBottomOf="@+id/frameNegara"/>
 
     <EditText
         android:id="@+id/etNoHp"
