--- a/app/src/main/res/layout/activity_lupa_password.xml
+++ b/app/src/main/res/layout/activity_lupa_password.xml
@@ -106,9 +106,10 @@
         app:layout_constraintTop_toBottomOf="@id/etEmail"/>
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnKirim"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/firstbutton"
         android:fontFamily="@font/dm_sans_medium"
         android:layout_marginVertical="55dp"
         android:paddingVertical="10dp"
@@ -119,6 +120,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:enabled="false"
-        android:backgroundTint="@color/warna_button"/>
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
