--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="2dp"
-        android:color="#DC3328" />
+        android:color="#2ACA10" />
     <corners
         android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp"
