--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -125,7 +125,7 @@
         android:paddingStart="10dp"
         android:layout_marginStart="24dp"
         android:textColorHint="@color/warning_font"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail"/>
 
@@ -162,6 +162,7 @@
         android:paddingStart="10dp"
         android:inputType="textPassword"
         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#*"
+        android:maxLength="16"
         android:layout_marginEnd="24dp"
         android:layout_marginVertical="5dp"
         android:textColorHint="@color/warna_auth_font"
@@ -179,9 +180,9 @@
         app:layout_constraintTop_toBottomOf="@+id/etPassword"
         android:paddingStart="10dp"
         android:layout_marginStart="24dp"
-        android:hint="Kata sandi salah"
+        android:hint="Kata sandi terdiri dari huruf besar, angka dan simbol (@ * #)"
         android:textColorHint="@color/warning_font"
-        android:visibility="invisible"/>
+        android:visibility="visible"/>
 
     <TextView
         android:id="@+id/tvLupaPassword"
@@ -200,17 +201,20 @@
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/firstbutton"
         android:fontFamily="@font/dm_sans_medium"
         android:layout_marginVertical="55dp"
         android:paddingVertical="10dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:text="Masuk"
+        android:backgroundTint="@color/warna_button"
         app:layout_constraintTop_toBottomOf="@+id/tvLupaPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        />
+<!--    android:enabled="false"-->
+<!--        dibwah untuk kasih warna button-->
+<!--    style="@style/firstbutton"-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
