masih belum fix comit

--- a/app/src/main/res/layout/activity_international_transfer.xml
+++ b/app/src/main/res/layout/activity_international_transfer.xml
@@ -92,9 +92,8 @@
             android:layout_marginStart="21dp"
             android:textSize="16sp"
             android:fontFamily="@font/dm_sans_medium"
-            android:textColor="@color/background_field"
+            android:textColor="@color/warna_grey_font"
             android:background="@drawable/rounded_bg_sechond"
-            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
             app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
             app:layout_constraintStart_toEndOf="@id/spinner_asal"
             app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
@@ -135,6 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:spinnerMode="dropdown"
+            app:layout_wrapBehaviorInParent="vertical_only"
             android:backgroundTint="@color/warna_primary_font"
             app:layout_constraintTop_toTopOf="@id/constrainTujuanNegara"
             app:layout_constraintStart_toEndOf="@id/frameTujuanTf"
@@ -149,9 +149,8 @@
             android:layout_marginStart="21dp"
             android:textSize="16sp"
             android:fontFamily="@font/dm_sans_medium"
-            android:textColor="@color/background_field"
+            android:textColor="@color/warna_grey_font"
             android:background="@drawable/rounded_bg_sechond"
-            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
             app:layout_constraintTop_toTopOf="@id/constrainTujuanNegara"
             app:layout_constraintStart_toEndOf="@id/spinner_tujuan"
             app:layout_constraintBottom_toBottomOf="@id/constrainTujuanNegara"/>
