udah jalan listener addOnchange tapi belum fix

--- a/app/src/main/res/layout/activity_international_transfer.xml
+++ b/app/src/main/res/layout/activity_international_transfer.xml
@@ -75,6 +75,7 @@
             android:hint="IDR"
             android:layout_marginStart="21dp"
             android:textSize="16sp"
+            android:inputType="number"
             android:fontFamily="@font/dm_sans_medium"
             android:textColor="@color/warna_grey_font"
             android:background="@drawable/rounded_bg_sechond"
@@ -112,9 +113,10 @@
             android:id="@+id/etDropTujuan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="USD"
+            android:hint=""
             android:layout_marginStart="21dp"
             android:textSize="16sp"
+            android:inputType="number"
             android:fontFamily="@font/dm_sans_medium"
             android:textColor="@color/warna_grey_font"
             android:background="@drawable/rounded_bg_sechond"
