--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,6 +24,14 @@
         <item name="android:textColor">@color/white</item>
         <item name="textAllCaps">false</item>
     </style>
+    <style name="invisiblebutton">
+        <item name="backgroundTint">@color/warna_button_invisible</item>
+        <item name="android:textSize">18sp</item>
+        <item name="cornerRadius">10dp</item>
+        <item name="android:state_pressed">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="textAllCaps">false</item>
+    </style>
 
     <style name="secondbutton">
         <item name="backgroundTint">@color/white</item>
